syntax = "proto3";

package kv_client;

message GetReq {
    string key = 1;
}

message Value {
    string key = 1;
    bytes value = 2;
}

message PutReq {
    string key = 1;
    bytes value = 2;
}

message PutRes {
    bool success = 1;
}

message DelReq {
    string key = 1;
}

message DelRes {
    bool ok = 1;
}

message Address {
    string host = 1;
    uint32 port = 2;
}

service KVStore {
    rpc Get (GetReq) returns (Value) {}
    rpc Put (PutReq) returns (PutRes) {}
    rpc Delete (DelReq) returns (DelRes) {}
}
